src/main/default/objects/Warehouse_Item__c/Warehouse_Item__c.object-meta.xml
<CustomObject>
    <label>Warehouse Item</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Warehouse Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warehouse Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>