src/main/default/objects/Warehouse_Item__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <inlineHelpText>Catalog item linked to the warehouse item.</inlineHelpText>
    <label>Catalog Item</label>
    <referenceTo>Catalog_Item__c</referenceTo>
    <relationshipName>Inventory_Location_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>