src/main/default/objects/Warehouse_Item__c/fields/Low_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Low_Quantity__c</fullName>
    <inlineHelpText>On hand quantity at which you should order more of the item.</inlineHelpText>
    <label>Low Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>