src/main/default/objects/Warehouse_Item__c/fields/Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_On_Hand__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Quantity of the item currently on hand.</inlineHelpText>
    <label>Quantity On Hand</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>