src/main/default/objects/Warehouse_Item__c/fields/Reorder_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Quantity__c</fullName>
    <inlineHelpText>Quantity in which you should order the item.</inlineHelpText>
    <label>Reorder Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>