src/main/default/objects/Warehouse_Item__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <inlineHelpText>Warehouse where the item is stored.</inlineHelpText>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Warehouse Items</relationshipLabel>
    <relationshipName>Inventory_Location_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>