src/main/default/objects/Warehouse_Item__c/fields/Warehouse_Item_Unique__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Item_Unique__c</fullName>
    <description>This field will hold the concatenation of the Warehouse ID + Catalog Item ID and this combo will be required to be unique.  This filed is autoupdated by a workflow rule and field update to ensure that you don't setup duplicate warehouse items.  This field never needs to be displayed to the user.</description>
    <inlineHelpText>Unique identifier for the warehouse item.</inlineHelpText>
    <label>Warehouse Item Unique</label>
    <length>160</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>